Improved JSONs legibility and stopped them from breaking pages

--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -740,3 +740,7 @@ p {
     border-radius: 15px;
     padding: 10px;
 }
+
+pre.wrapped-json {
+    white-space: pre-wrap;
+}
